# skillctrl

./: .gitattributes  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-Apache-2.0.txt  Makefile  QUICKSTART.md  README.md  USER_GUIDE.md  build.sh  package.sh  skillctrl.md  todo.md
.github/workflows/: ci.yml  release.yml
crates/skillctrl-adapter-claude/: Cargo.toml
crates/skillctrl-adapter-claude/src/: lib.rs
crates/skillctrl-adapter-codex/: Cargo.toml
crates/skillctrl-adapter-codex/src/: lib.rs
crates/skillctrl-adapter-core/: Cargo.toml
crates/skillctrl-adapter-core/src/: lib.rs
crates/skillctrl-adapter-cursor/: Cargo.toml
crates/skillctrl-adapter-cursor/src/: lib.rs
crates/skillctrl-catalog/: Cargo.toml
crates/skillctrl-catalog/src/: lib.rs
crates/skillctrl-cli/: Cargo.toml
crates/skillctrl-cli/src/: main.rs
crates/skillctrl-core/: Cargo.toml
crates/skillctrl-core/src/: component.rs  dependency.rs  endpoint.rs  error.rs  lib.rs  manifest.rs  result.rs  scope.rs  validation.rs  version.rs
crates/skillctrl-exporter-core/: Cargo.toml
crates/skillctrl-exporter-core/src/: lib.rs
crates/skillctrl-git/: Cargo.toml
crates/skillctrl-git/src/: lib.rs
crates/skillctrl-importer-claude/: Cargo.toml
crates/skillctrl-importer-claude/src/: lib.rs
crates/skillctrl-importer-core/: Cargo.toml
crates/skillctrl-importer-core/src/: lib.rs
crates/skillctrl-state/: Cargo.toml
crates/skillctrl-state/src/: lib.rs
examples/market/: catalog.yaml
examples/market/bundles/review-pr/: bundle.yaml
examples/market/bundles/review-pr/components/resources/: checklist.md
examples/market/bundles/review-pr/components/rules/: review-policy.md
examples/market/bundles/review-pr/components/skills/review-pr/: SKILL.md
scripts/: package-windows.ps1
skillctrl-desktop/: Cargo.toml  index.html  package-lock.json  package.json  tauri.conf.json  tsconfig.json  vite.config.ts
skillctrl-desktop/src/: main.rs
skillctrl-desktop/web/: App.tsx  api.ts  styles.css  types.ts
