[package]
name = "skillctrl-adapter-cursor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cursor adapter for skillctrl"

[dependencies]
skillctrl-core = { path = "../skillctrl-core" }
skillctrl-adapter-core = { path = "../skillctrl-adapter-core" }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
camino = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
tokio = { workspace = true }
semver = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3.14"
pretty_assertions = "1.4"
