[package]
name = "skillctrl-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and traits for skillctrl"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
camino = { workspace = true }
semver = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
schemars = { workspace = true }
tracing = { workspace = true }
paste = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4"
