[package]
name = "skillctrl-importer-claude"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Claude Code importer for skillctrl"

[dependencies]
skillctrl-core = { path = "../skillctrl-core" }
skillctrl-importer-core = { path = "../skillctrl-importer-core" }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
camino = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
tokio = { workspace = true }
semver = { workspace = true }
serde_yaml = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3.14"
pretty_assertions = "1.4"
